Implemented Any support with wildcards instead of downcast; improved instantiation behavior